Update MinMaxNumber.java